# email-newsletter

./: Cargo.toml  Dockerfile  codecov.yml
.cargo/: config.toml
.github/actions-rs/: grcov.yml
.github/workflows/: test.yml
configuration/: base.yaml  production.yaml
migrations/: 20230126225916_create_subscriptions_table.sql  20230209232321_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
