[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
claim = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.38"
anyhow = "1.0.70"
base64 = "0.21.2"
argon2 = { version = "0.4.0", features = ["std"] }
urlencoding = "2.1.2"
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
fake = "~2.3"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
linkify = "0.8"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"
